--- a/Desktop/radio-back/vercel.json
+++ b/Desktop/radio-back/vercel.json
@@ -1,14 +1,15 @@
 {
+    "version": 2,
     "builds":[
         {
-            "src": "radio-back/main.py",
+            "src": "main.py",
             "use": "@vercel/python"
         }
     ],
     "routes":[
         {
             "src": "/(.*)",
-            "dest": "radio-back/main.py"
+            "dest": "main.py"
         }
     ]
 }
